--- a/index.html
+++ b/index.html
@@ -8,38 +8,39 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <h1>Stuti Garg's Portfolio</h1>
     </header>
     
     <section id="about-me">
         <h2>About Me</h2>
-        <p>Hello! I'm Stuti, Computer Science Engineering student. I have a deep interest in machine learning and deep learning, and I am committed to exploring innovative solutions through these technologies. My passion extends beyond just coding; I love storytelling through crafting stories or Kathak. I aim to leverage machine learning to address social challenges, fostering solutions that positively impact communities and enhance quality of life.</p>
+        <p>Hello! I'm Stuti, a 3rd year Computer Science Engineering student at Mahindra University. I have deep interests in machine learning and artificial intelligence, and I am committed to exploring innovative solutions through these technologies. My passion extends beyond just coding; I love storytelling through crafting stories or Kathak. I aim to leverage machine learning to address social challenges, fostering solutions that positively impact communities and enhance quality of life.</p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <p>🌼 In June 2022, I embarked on a project aimed at improving aviation safety by addressing the mental stability of pilots...</p>
-        <p>🌼 In October 2023, I developed a Movie Recommender Engine that leverages machine learning techniques...</p>
-        <p>🌼 In June 2024, I focused on enhancing the visibility of a website through effective Search Engine Optimization (SEO) strategies...</p>
-        <p>🌼 In May 2024, I worked on a project focused on patient analysis, utilizing Gradient Boosting and Random Forest classifiers...</p>
+        <p>🌼 In June 2022, I embarked on a project aimed at improving aviation safety by addressing the mental stability of pilots through Verifying Mental Stability of Pilots using Encephalogram. I proposed a methodology that employs EEG tests to assess pilots' readiness for safe flight operations. This initiative seeks to minimize airplane mishaps attributed to mental instability by providing employers with insights to identify potential issues among pilots, classifying them as either fit to fly or in need of medical evaluation. Throughout this project, I gained valuable experience in hypothesis formulation, research methodologies, and collaborative efforts.</p>
+        <p>🌼 Building on this foundation, in October 2023, I developed a Movie Recommender Engine that leverages machine learning techniques to personalize user experiences. This recommendation system predicts whether an eleventh movie, based on a user's watchlist of ten films, will resonate with their preferences. I curated comprehensive datasets that encompassed critical attributes such as release year, genre, IMDb rating, actors, and filming locations. By analyzing commonalities and differences among the listed movies, I applied advanced machine learning methods and generative AI models to discern user inclinations and movie characteristics. This project enhanced my skills in Python, data curation, and the application of generative AI.</p>
+        <p>🌼 In May 2024, I further expanded my machine learning knowledge by working on a project focused on patient analysis, utilizing Gradient Boosting and Random Forest classifiers. This initiative aimed to analyze patient data effectively, helping healthcare professionals make informed decisions. By leveraging these powerful algorithms, I learned how to extract meaningful insights from complex datasets, enhancing my skills in predictive modeling and data-driven decision-making.</p>
+        <p>🌼 Most recently, in June 2024, I focused on enhancing the visibility of a website through effective Search Engine Optimization (SEO) strategies. Utilizing Squarespace site-level tools and on-page SEO best practices, I successfully optimized content and implemented local SEO techniques. This effort not only improved the site's searchability but also ensured consistent business information across various platforms. Key skills honed during this project include SEO fundamentals, local search optimization, and crafting engaging meta descriptions.</p>
+        <p>🌼 Through these projects, I have developed a diverse skill set and cultivated a deep commitment to leveraging technology in innovative ways that benefit society. Each experience has fueled my passion for exploring new solutions and making a positive impact in the communities I serve.</p>
     </section>
 
     <section id="achievements">
         <h2>Achievements</h2>
-        <p>✨ I am proud to have contributed to the field of financial technology by authoring a chapter on Personalized Banking Services through AI...</p>
-        <p>✨ In the realm of analytics, I participated in Trilytics’24, an Analytics Case Competition hosted by IIM Calcutta...</p>
-        <p>✨ Achieving an Advanced Diploma in Kathak with distinction in April 2021 was a significant milestone in my journey as a performer...</p>
-        <p>✨ My participation in over seven Model United Nations conferences has been transformative...</p>
-        <p>✨ Earlier in my academic journey, I showcased my creativity by winning first place in an Inter-House Story Writing Competition...</p>
-        <p>✨ In 2017, I proudly published a story in The Acorn book...</p>
-        <p>✨ Additionally, in 2016, I earned recognition as a semi-finalist in the national-level Classmate Spelling Bee...</p>
+        <p>✨ I am proud to have contributed to the field of financial technology by authoring a chapter on Personalized Banking Services through AI: chatbots, virtual assistants, and customized offers in the book titled Smart Financial Market: AI and the Future of Banking. This experience allowed me to delve deep into how AI can revolutionize banking and enhance customer interactions.</p>
+        <p>✨ In the realm of analytics, I participated in Trilytics’24, an Analytics Case Competition hosted by IIM Calcutta, pushing me to develop innovative solutions to complex problems, further sharpening my analytical skills.</p>
+        <p>✨ Achieving an Advanced Diploma in Kathak with distinction in April 2021 was a significant milestone in my journey as a performer. This accomplishment reflects my dedication to the art form and my commitment to excellence in classical dance.</p>
+        <p>✨ My participation in over seven Model United Nations conferences has been transformative. Representing countries such as Ecuador in UNEP at the Harvard Model United Nations Conference, as well as serving as a delegate for Sudan and roles like Wolfram von Richthofen for Germany and Army Head for Vietnam, provided me with invaluable opportunities to tackle real-world issues. These experiences cultivated my ability to think critically and make informed decisions swiftly.</p>
+        <p>✨ Earlier in my academic journey, I showcased my creativity by winning first place in an Inter-House Story Writing Competition during grades 8 and 9 at Oakridge, demonstrating my passion for storytelling.</p>
+        <p>✨ n 2017, I proudly published a story in The Acorn book, which garnered coverage from The Times of India, further igniting my love for writing and storytelling.</p>
+        <p>✨ Additionally, in 2016, I earned recognition as a semi-finalist in the national-level Classmate Spelling Bee, highlighting my commitment to language proficiency and communication skills.</p>
     </section>
 
     <section id="contact">
         <h2>Contact</h2>
         <p>If you’d like to get in touch, feel free to reach out through the following channels:</p>
         <p>📧 Email: <a href="mailto:stutig56@gmail.com">stutig56@gmail.com</a></p>
-        <p>💻 GitHub: <a href="https://github.com/stutigarg">stutigarg1</a></p>
+        <p>💻 GitHub: <a href="https://github.com/stutigarg1">stutigarg1</a></p>
     </section>
 
     <footer>
